hphp/hack/test/typecheck/shape/shape_idx_required_field_with_default_return.php.like_types.exp
File "shape_idx_required_field_with_default_return.php", line 6, characters 22-23:
Invalid argument (Typing[4110])
File "shape_idx_required_field_with_default_return.php", line 6, characters 22-23:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_required_field_with_default_return.php", line 4, characters 3-19:
But got dynamic because it is an unenforceable type
